Fix alignment of profile/feed navigation

--- a/com/profile-header.less
+++ b/com/profile-header.less
@@ -8,7 +8,6 @@
     display: inline-block;
     border-bottom: 2px solid transparent;
     font-weight: 500;
-    height: 38px;
     line-height: 19px;
     width: 75px;
     padding: 5px 10px;
